--- a/src/components/Common/Table/Table.module.css
+++ b/src/components/Common/Table/Table.module.css
@@ -13,3 +13,11 @@
 .removeInset > div:nth-child(2) {
   width: 6px !important;
 }
+
+.borders {
+  border: 1px solid var(--indigo-500) !important;
+}
+
+.fontSize16 {
+  font-size: 16px !important;
+}
