--- a/src/components/Common/Tabs/index.module.css
+++ b/src/components/Common/Tabs/index.module.css
@@ -10,6 +10,7 @@
   height: 100% !important;
 }
 
+.hover_background_no_count > *,
 .hover_background > * {
   position: relative;
   z-index: 2;
@@ -17,6 +18,7 @@
 }
 
 .selectedNavTitle,
+.hover_background_no_count,
 .hover_background {
   position: relative;
   height: 36px;
@@ -28,8 +30,13 @@
   border-radius: 10px;
 }
 
+.hover_background_no_count {
+  padding: 0 16px;
+}
+
 .selectedNavTitle:before,
-.hover_background:before {
+.hover_background:before,
+.hover_background_no_count:before {
   border-radius: 10px;
   content: '';
   position: absolute;
@@ -39,11 +46,12 @@
   left: 0;
   background: var(--indigo-600);
   transform-origin: bottom right;
-  transition: transform 0.5s ease-out;
+  transition: transform 0.4s ease-out;
 }
 
 .selectedNavTitle:before,
-.hover_background:hover:before {
+.hover_background:hover:before,
+.hover_background_no_count:hover:before {
   border-radius: 10px;
   content: '';
   transform: scaleX(1);
