--- a/src/components/WhitePaper/Index.module.css
+++ b/src/components/WhitePaper/Index.module.css
@@ -4,13 +4,13 @@
 
 .link,
 .bodyText,
-.subHeading,
 .heading {
-  font-size: 18px;
+  font-size: 24px;
+  font-weight: 600;
+
   color: white;
   font-family: 'Montserrat' !important;
   line-height: 150% !important;
-  font-weight: 500;
 }
 
 .link,
@@ -24,7 +24,24 @@
   cursor: pointer;
 }
 
-.heading {
-  font-size: 24px;
-  font-weight: 600;
+@media screen and (max-width: 768px) {
+  .heading {
+    font-size: 18px;
+  }
+
+  .link,
+  .bodyText {
+    font-size: 13px;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .heading {
+    font-size: 16px;
+  }
+
+  .link,
+  .bodyText {
+    font-size: 12px;
+  }
 }
