--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -8,3 +8,154 @@
   -moz-text-fill-color: transparent;
   letter-spacing: 1px;
 }
+
+.nftBottom {
+  background: linear-gradient(110.6deg, rgb(141, 80, 238) 2.2%, rgb(73, 89, 234) 100.2%);
+}
+
+.goldCard {
+  background: linear-gradient(109.6deg, rgb(255, 241, 47) 11.2%, rgb(253, 211, 0) 100.2%);
+  border-color: rgb(255, 219, 47);
+}
+
+.silverCard {
+  background: linear-gradient(to top, #dfe9f3 0%, white 100%);
+  border-color: #dfe9f3;
+}
+
+.platinumCard {
+  background: radial-gradient(circle at 10% 20%, rgb(236, 158, 248) 0%, rgb(131, 83, 241) 90.1%);
+  border-color: rgb(131, 83, 241);
+}
+
+.goldText {
+  background-image: linear-gradient(45deg, rgb(255, 219, 47), rgb(244, 253, 0) 100.2%);
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  letter-spacing: 1px;
+}
+
+.silverText {
+  background-image: linear-gradient(45deg, #dfe9f3, #c8c8c8 100.2%);
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  letter-spacing: 1px;
+}
+
+.platinumText {
+  background-image: linear-gradient(45deg, rgb(236, 158, 248), rgb(131, 83, 241) 100.2%);
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  letter-spacing: 1px;
+}
+
+.curvedBorderPlatinumRight,
+.curvedBorderPlatinum,
+.curvedBorderGoldRight,
+.curvedBorderGold,
+.curvedBorderSilverRight,
+.curvedBorderSilver {
+  z-index: 500;
+  display: block;
+  height: 30px;
+  position: relative;
+  width: 20px;
+  transform: rotate(90deg);
+}
+
+.curvedBorderPlatinumRight,
+.curvedBorderSilverRight,
+.curvedBorderGoldRight {
+  transform: rotate(270deg) translateX(-27.5px) translateY(-5.5px);
+}
+
+.curvedBorderPlatinumRight::before,
+.curvedBorderPlatinum::before,
+.curvedBorderSilverRight::before,
+.curvedBorderSilver::before,
+.curvedBorderGoldRight::before,
+.curvedBorderGold::before {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 25px;
+  top: 10px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 15px 0 0px 14px;
+  border-color: rgb(255, 238, 0) transparent transparent transparent;
+}
+
+.curvedBorderPlatinumRight::after,
+.curvedBorderPlatinum::after,
+.curvedBorderSilverRight::after,
+.curvedBorderSilver::after,
+.curvedBorderGoldRight::after,
+.curvedBorderGold::after {
+  content: '';
+  display: block;
+  position: absolute;
+  right: -32.5px;
+  width: 0;
+  bottom: 5px;
+  height: 0;
+  border-style: solid;
+  border-width: 15px 14px 0 0;
+  border-color: rgb(255, 238, 0) transparent transparent transparent;
+}
+
+.curvedBorderSilverRight::before,
+.curvedBorderSilver::before,
+.curvedBorderSilverRight::after,
+.curvedBorderSilver::after {
+  border-color: #dfe9f3 transparent transparent transparent;
+}
+
+.curvedBorderPlatinumRight::before,
+.curvedBorderPlatinumRight::after {
+  border-color: rgb(131, 83, 241) transparent transparent transparent;
+}
+
+.curvedBorderPlatinum::before,
+.curvedBorderPlatinum::after {
+  border-color: rgb(236, 158, 248) transparent transparent transparent;
+}
+
+.borderColorGold {
+  border-color: rgb(255, 238, 0);
+}
+
+.borderColorSilver {
+  border-color: #dfe9f3;
+}
+
+.borderColorPlatinum {
+  border-color: rgb(131, 83, 241);
+}
+
+.wheelAnim {
+  animation: rotation 20s infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
