--- a/client/src/components/Common/Table/Table.module.css
+++ b/client/src/components/Common/Table/Table.module.css
@@ -21,3 +21,43 @@
 .fontSize16 {
   font-size: 16px !important;
 }
+
+.fontSize14 {
+  font-size: 14px !important;
+}
+
+@media screen and (max-width: 640px) {
+  .fontSize16 {
+    font-size: 14px !important;
+    padding: 14px 10px !important;
+  }
+
+  .fontSize14 {
+    font-size: 12px !important;
+    padding: 14px 10px !important;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .fontSize16 {
+    font-size: 12px !important;
+    padding: 10px 6px !important;
+  }
+
+  .fontSize14 {
+    font-size: 10px !important;
+    padding: 10px 6px !important;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .fontSize16 {
+    font-size: 10px !important;
+    padding: 10px 4px !important;
+  }
+
+  .fontSize14 {
+    font-size: 8px !important;
+    padding: 10px 4px !important;
+  }
+}
