--- a/client/src/components/Common/TermsAndConditions/TermsAndConditions.module.css
+++ b/client/src/components/Common/TermsAndConditions/TermsAndConditions.module.css
@@ -14,6 +14,7 @@
   font-family: 'Montserrat' !important;
   color: white !important;
   font-size: 14px !important;
+  line-height: 210% !important;
 }
 
 .bottom {
@@ -26,13 +27,13 @@
   font-family: 'Montserrat' !important;
   font-size: 14px !important;
   font-weight: 300 !important;
-  line-height: 150% !important;
+  line-height: 210% !important;
 }
 
 .bottom,
 .heading {
-  font-size: 16px;
-  font-weight: 500;
+  font-size: 16px !important;
+  font-weight: 600 !important;
 }
 
 .modalRootChild > div:nth-child(1) {
@@ -64,6 +65,10 @@
 .scrollbarColor {
   background-color: red;
   height: 10px !important;
+}
+
+.bold {
+  font-weight: 600 !important;
 }
 
 @media screen and (max-width: 768px) {
